Regression(r175947): Caused assertions in debug builds https://bugs.webkit.org/show_bug.cgi?id=138620

Reviewed by Benjamin Poulain.

In HTMLCollection::traverseForward(), traversedCount was incremented 1
time too many when hitting the end of the collection (i.e. element
becomes null). Doing a partial revert.

No new tests, already covered by existing tests.

* html/HTMLCollection.cpp:
(WebCore::HTMLCollection::traverseForward):

Canonical link: https://commits.webkit.org/156455@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175968 268f45cc-cd09-0410-ab3c-d52691b4dbfc